# PersonalSite

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
backend/: app.py  house_monitor.py  house_scraper.py  houses.py  nightly.py  pp.py  push.py
backend/tools/: gmail.py  whatsapp.py
data/: .gitkeep
data/ripraven/: .gitkeep
frontend/: index.html  nightly.html  rip_raven.html  styles.css
ripraven/: __init__.py  async_downloader.py  comic_reader.py  comic_scraper.py  download_only.py  logging_utils.py  main.py  pattern_finder.py  read.py  scraper.py  series_index.py  terminal_reader.py  tracking.py  web_reader.py  worker.py
ripraven/static/: api-client.js  chapter-renderer.js  comic-reader.js  navigation-manager.js  ripraven.user.js  state-manager.js  styles.css  ui-controller.js  utils.js
ripraven/templates/: ripraven_home.html  ripraven_reader.html
scripts/: gmail_oauth_setup.py
